Updated Js Files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <section class="col-sm-10 offset-sm-1 list-group">
                 <article class="list-group-item">
                     <h5>A Blog Post</h5>
-                    <p>Hide at bottom of staircase to trip human. Ask for petting. Roll on the floor purring your whiskers off. Trip on catnip nap all day, eat too much then proceed to regurgitate all over living room carpet while humans eat dinner nya nya nyan. Attack the child groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked playing with balls of wool.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi id consequuntur, sunt sequi eos explicabo quae quisquam assumenda! Molestias repellat ex obcaecati, nulla ipsa quis quisquam maxime sed quas laboriosam consequatur minus dicta maiores quo voluptatum sequi ratione enim animi, deleniti, perferendis excepturi! Ipsum ex impedit quas, perspiciatis, deleniti sunt iure officiis delectus ea ullam repudiandae perferendis id, tempora soluta?</p>
                 </article>
             </section>
         </main>
