Added Event listener to remove post

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <section class="col-sm-10 offset-sm-1 list-group">
                 <article class="list-group-item">
                     <h5>A Blog Post</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi id consequuntur, sunt sequi eos explicabo quae quisquam assumenda! Molestias repellat ex obcaecati, nulla ipsa quis quisquam maxime sed quas laboriosam consequatur minus dicta maiores quo voluptatum sequi ratione enim animi, deleniti, perferendis excepturi! Ipsum ex impedit quas, perspiciatis, deleniti sunt iure officiis delectus ea ullam repudiandae perferendis id, tempora soluta?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi id consequuntur, sunt sequi eos explicabo quae quisquam assumenda! Molestias repellat ex obcaecati, nulla ipsa quis quisquam maxime sed quas laboriosam consequatur minus dicta maiores quo voluptatum sequi ratione enim animi, deleniti, perferendis excepturi! Ipsum ex impedit quas, perspiciatis, deleniti sunt iure officiis delectus ea ullam repudiandae perferendis id, tempora soluta.</p>
                 </article>
             </section>
         </main>
